# archecho

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
src/detectors/patterns/: haiku.py
tests/: conftest.py
tests/detectors/patterns/: test_haiku.py
