[tool.poetry]
name = "archecho"
version = "0.1.0"
description = ""
authors = ["shitake"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
yapf = "^0.31.0"
mypy = "^0.812"
isort = "^5.7.0"
mecab-python3 = "^1.0.3"
jupyter = "^1.0.0"
spacy = "2.3.2"
ginza = "^4.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
